--- a/Sample during training-LSTM Only.ipynb
+++ b/Sample during training-LSTM Only.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -28,11 +36,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "OneHotEncoder(categories='auto', drop=None, dtype=<class 'numpy.float64'>,\n",
+       "              handle_unknown='error', sparse=True)"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "countriesOfInterest = [\"HK\", \"JP\", 'ZA', 'TN', 'TR', 'GB', 'MX', 'US', 'CO', 'EC', 'AU', 'NZ']\n",
+    "countriesOfInterest = [\"HK\", \"J P\", 'ZA', 'TN', 'TR', 'GB', 'MX', 'US', 'CO', 'EC', 'AU', 'NZ']\n",
     "countriesOfInterest = [\"ZA\", \"EG\", \"TW\", \"JP\", \"DK\", \"FI\", \"US\", \"CA\", \"AU\", \"NZ\", \"BE\", \"CO\"]\n",
     "train_n = 500\n",
     "val_n = 20\n",
@@ -44,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,6 +140,7 @@
     "    val_x = []\n",
     "    val_labels = []\n",
     "    for country in countriesOfInterest:\n",
+    "        print(\"getting\",country)\n",
     "        x1, y1 = splitSeconds(train_n, country, \"train\")\n",
     "        x2, y2 = splitSeconds(val_n, country, \"val\")\n",
     "        train_x = train_x + x1.tolist()\n",
@@ -140,9 +161,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "getting ZA\n",
+      "getting EG\n",
+      "getting TW\n",
+      "getting JP\n",
+      "getting DK\n",
+      "getting FI\n",
+      "getting US\n",
+      "getting CA\n",
+      "getting AU\n",
+      "getting NZ\n",
+      "getting BE\n",
+      "getting CO\n"
+     ]
+    }
+   ],
    "source": [
     "train_x, train_labels, val_x, val_labels, class_weights = getSamples(1, 1)"
    ]
@@ -156,18 +196,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[array(['AU', 'BE', 'CA', 'CO', 'DK', 'EG', 'FI', 'JP', 'NZ', 'TW', 'US',\n",
+       "        'ZA'], dtype='<U2')]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "enc.categories_"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential\"\n",
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "lstm (LSTM)                  (None, 300, 32)           7296      \n",
+      "_________________________________________________________________\n",
+      "batch_normalization (BatchNo (None, 300, 32)           128       \n",
+      "_________________________________________________________________\n",
+      "lstm_1 (LSTM)                (None, 64)                24832     \n",
+      "_________________________________________________________________\n",
+      "batch_normalization_1 (Batch (None, 64)                256       \n",
+      "_________________________________________________________________\n",
+      "dropout (Dropout)            (None, 64)                0         \n",
+      "_________________________________________________________________\n",
+      "dense (Dense)                (None, 12)                780       \n",
+      "=================================================================\n",
+      "Total params: 33,292\n",
+      "Trainable params: 33,100\n",
+      "Non-trainable params: 192\n",
+      "_________________________________________________________________\n",
+      "None\n"
+     ]
+    }
+   ],
    "source": [
     "model = keras.Sequential()\n",
     "model.add(LSTM(32, \n",
@@ -177,19 +257,19 @@
     "model.add(BatchNormalization())\n",
     "model.add(LSTM(64, \n",
     "               input_shape=(train_x.shape[1], train_x.shape[2]), \n",
-    "               return_sequences = True,\n",
+    "               return_sequences = False,\n",
     "               dropout = .5,\n",
     "              go_backwards = True))\n",
-    "model.add(BatchNormalization())\n",
-    "model.add(LSTM(128, \n",
-    "               input_shape=(train_x.shape[1], train_x.shape[2]), \n",
-    "               dropout = .5\n",
-    "              ))\n",
-    "model.add(BatchNormalization())\n",
-    "model.add(Dropout(.5))\n",
-    "model.add(Dense(128, activation = \"relu\"))\n",
+    "#model.add(BatchNormalization())\n",
+    "#model.add(LSTM(64, \n",
+    "#               input_shape=(train_x.shape[1], train_x.shape[2]),\n",
+    "#               dropout = .5\n",
+    "#              ))\n",
     "model.add(BatchNormalization())\n",
     "model.add(Dropout(.5))\n",
+    "#model.add(Dense(64, activation = \"relu\"))\n",
+    "#model.add(BatchNormalization())\n",
+    "#model.add(Dropout(.5))\n",
     "model.add(Dense(len(enc.categories_[0]), activation= \"softmax\"))\n",
     "adam = keras.optimizers.Adam(lr=0.001)\n",
     "model.compile(loss = \"categorical_crossentropy\", optimizer= adam, metrics=[\"acc\"])\n",
@@ -202,15 +282,52 @@
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "getting ZA\n",
+      "getting EG\n",
+      "getting TW\n",
+      "getting JP\n",
+      "getting DK\n",
+      "getting FI\n",
+      "getting US\n",
+      "getting CA\n",
+      "getting AU\n",
+      "getting NZ\n",
+      "getting BE\n",
+      "getting CO\n",
+      "[4350. 4296. 4300. 4351. 4242. 4292. 4315. 4363. 4316. 4428. 4336. 4403.]\n",
+      "Train on 51992 samples, validate on 10400 samples\n",
+      "Epoch 1/25\n",
+      "51992/51992 [==============================] - 158s 3ms/sample - loss: 3.2366 - acc: 0.0916 - val_loss: 2.4684 - val_acc: 0.1203\n",
+      "Epoch 2/25\n",
+      "51992/51992 [==============================] - 221s 4ms/sample - loss: 2.8523 - acc: 0.0992 - val_loss: 2.4594 - val_acc: 0.1280\n",
+      "Epoch 3/25\n",
+      "51992/51992 [==============================] - 260s 5ms/sample - loss: 2.6841 - acc: 0.1056 - val_loss: 2.4509 - val_acc: 0.1328\n",
+      "Epoch 4/25\n",
+      "51992/51992 [==============================] - 320s 6ms/sample - loss: 2.5926 - acc: 0.1146 - val_loss: 2.4437 - val_acc: 0.1388\n",
+      "Epoch 5/25\n",
+      "51992/51992 [==============================] - 348s 7ms/sample - loss: 2.5240 - acc: 0.1203 - val_loss: 2.4346 - val_acc: 0.1397\n",
+      "Epoch 6/25\n",
+      "51992/51992 [==============================] - 346s 7ms/sample - loss: 2.4819 - acc: 0.1303 - val_loss: 2.4307 - val_acc: 0.1436\n",
+      "Epoch 7/25\n",
+      "51992/51992 [==============================] - 371s 7ms/sample - loss: 2.4562 - acc: 0.1371 - val_loss: 2.4250 - val_acc: 0.1494\n",
+      "Epoch 8/25\n",
+      "31744/51992 [=================>............] - ETA: 2:23 - loss: 2.4338 - acc: 0.1478"
+     ]
+    }
+   ],
    "source": [
     "log_dir = os.path.join(\n",
     "    \"logs\",\n",
     "    \"fit\",\n",
-    "    \"32_64_128_128_addDropout\"\n",
+    "    \"32_64_Dropout_5000sample\"\n",
     ")\n",
-    "train_n = 500\n",
-    "val_n = 100\n",
+    "train_n = 5000\n",
+    "val_n = 1000\n",
     "tensorboard_callback = tf.keras.callbacks.TensorBoard(log_dir=log_dir, histogram_freq=1)\n",
     "epochs = 25\n",
     "iterations = 10\n",
@@ -253,6 +370,83 @@
     "        plt.pause(.5)\n",
     "        plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
