Updated presentation list

--- a/Sample during training-LSTM Only.ipynb
+++ b/Sample during training-LSTM Only.ipynb
@@ -228,21 +228,25 @@
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "lstm (LSTM)                  (None, 300, 32)           7296      \n",
+      "lstm (LSTM)                  (None, 300, 64)           22784     \n",
       "_________________________________________________________________\n",
-      "batch_normalization (BatchNo (None, 300, 32)           128       \n",
+      "batch_normalization (BatchNo (None, 300, 64)           256       \n",
       "_________________________________________________________________\n",
-      "lstm_1 (LSTM)                (None, 64)                24832     \n",
+      "lstm_1 (LSTM)                (None, 300, 128)          98816     \n",
       "_________________________________________________________________\n",
-      "batch_normalization_1 (Batch (None, 64)                256       \n",
+      "batch_normalization_1 (Batch (None, 300, 128)          512       \n",
       "_________________________________________________________________\n",
-      "dropout (Dropout)            (None, 64)                0         \n",
+      "lstm_2 (LSTM)                (None, 128)               131584    \n",
       "_________________________________________________________________\n",
-      "dense (Dense)                (None, 12)                780       \n",
+      "batch_normalization_2 (Batch (None, 128)               512       \n",
+      "_________________________________________________________________\n",
+      "dropout (Dropout)            (None, 128)               0         \n",
+      "_________________________________________________________________\n",
+      "dense (Dense)                (None, 12)                1548      \n",
       "=================================================================\n",
-      "Total params: 33,292\n",
-      "Trainable params: 33,100\n",
-      "Non-trainable params: 192\n",
+      "Total params: 256,012\n",
+      "Trainable params: 255,372\n",
+      "Non-trainable params: 640\n",
       "_________________________________________________________________\n",
       "None\n"
      ]
@@ -250,21 +254,21 @@
    ],
    "source": [
     "model = keras.Sequential()\n",
-    "model.add(LSTM(32, \n",
+    "model.add(LSTM(64, \n",
     "               input_shape=(train_x.shape[1], train_x.shape[2]), \n",
     "               return_sequences = True\n",
     "              ))\n",
     "model.add(BatchNormalization())\n",
-    "model.add(LSTM(64, \n",
+    "model.add(LSTM(128, \n",
     "               input_shape=(train_x.shape[1], train_x.shape[2]), \n",
-    "               return_sequences = False,\n",
+    "               return_sequences = True,\n",
     "               dropout = .5,\n",
     "              go_backwards = True))\n",
-    "#model.add(BatchNormalization())\n",
-    "#model.add(LSTM(64, \n",
-    "#               input_shape=(train_x.shape[1], train_x.shape[2]),\n",
-    "#               dropout = .5\n",
-    "#              ))\n",
+    "model.add(BatchNormalization())\n",
+    "model.add(LSTM(128, \n",
+    "               input_shape=(train_x.shape[1], train_x.shape[2]),\n",
+    "               dropout = .5\n",
+    "              ))\n",
     "model.add(BatchNormalization())\n",
     "model.add(Dropout(.5))\n",
     "#model.add(Dense(64, activation = \"relu\"))\n",
@@ -293,30 +297,7 @@
       "getting JP\n",
       "getting DK\n",
       "getting FI\n",
-      "getting US\n",
-      "getting CA\n",
-      "getting AU\n",
-      "getting NZ\n",
-      "getting BE\n",
-      "getting CO\n",
-      "[4350. 4296. 4300. 4351. 4242. 4292. 4315. 4363. 4316. 4428. 4336. 4403.]\n",
-      "Train on 51992 samples, validate on 10400 samples\n",
-      "Epoch 1/25\n",
-      "51992/51992 [==============================] - 158s 3ms/sample - loss: 3.2366 - acc: 0.0916 - val_loss: 2.4684 - val_acc: 0.1203\n",
-      "Epoch 2/25\n",
-      "51992/51992 [==============================] - 221s 4ms/sample - loss: 2.8523 - acc: 0.0992 - val_loss: 2.4594 - val_acc: 0.1280\n",
-      "Epoch 3/25\n",
-      "51992/51992 [==============================] - 260s 5ms/sample - loss: 2.6841 - acc: 0.1056 - val_loss: 2.4509 - val_acc: 0.1328\n",
-      "Epoch 4/25\n",
-      "51992/51992 [==============================] - 320s 6ms/sample - loss: 2.5926 - acc: 0.1146 - val_loss: 2.4437 - val_acc: 0.1388\n",
-      "Epoch 5/25\n",
-      "51992/51992 [==============================] - 348s 7ms/sample - loss: 2.5240 - acc: 0.1203 - val_loss: 2.4346 - val_acc: 0.1397\n",
-      "Epoch 6/25\n",
-      "51992/51992 [==============================] - 346s 7ms/sample - loss: 2.4819 - acc: 0.1303 - val_loss: 2.4307 - val_acc: 0.1436\n",
-      "Epoch 7/25\n",
-      "51992/51992 [==============================] - 371s 7ms/sample - loss: 2.4562 - acc: 0.1371 - val_loss: 2.4250 - val_acc: 0.1494\n",
-      "Epoch 8/25\n",
-      "31744/51992 [=================>............] - ETA: 2:23 - loss: 2.4338 - acc: 0.1478"
+      "getting US\n"
      ]
     }
    ],
@@ -324,7 +305,7 @@
     "log_dir = os.path.join(\n",
     "    \"logs\",\n",
     "    \"fit\",\n",
-    "    \"32_64_Dropout_5000sample\"\n",
+    "    \"64_128_128_Dropout_5000sample\"\n",
     ")\n",
     "train_n = 5000\n",
     "val_n = 1000\n",
