--- a/Descriptive stats.ipynb
+++ b/Descriptive stats.ipynb
@@ -11,7 +11,8 @@
     "import datetime\n",
     "\n",
     "countriesOfInterest = [\"HK\", \"JP\", 'ZA', 'TN', 'TR', 'GB', 'MX', 'US', 'CO',\n",
-    "                       'EC', 'AU', 'NZ']"
+    "                       'EC', 'AU', 'NZ']\n",
+    "countriesOfInterest = [\"ZA\", \"EG\", \"TW\", \"JP\", \"DK\", \"FI\", \"US\", \"CA\", \"AU\", \"NZ\", \"BE\", \"CO\"]\n"
    ]
   },
   {
@@ -76,95 +77,95 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>HK</th>\n",
-       "      <td>1103.0</td>\n",
-       "      <td>26.0</td>\n",
-       "      <td>599.970082</td>\n",
-       "      <td>0:03:38.428565</td>\n",
+       "      <th>ZA</th>\n",
+       "      <td>2192.0</td>\n",
+       "      <td>69.0</td>\n",
+       "      <td>1043.009124</td>\n",
+       "      <td>0:04:26.854877</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>EG</th>\n",
+       "      <td>810.0</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>888.991358</td>\n",
+       "      <td>0:03:55.153939</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>TW</th>\n",
+       "      <td>2808.0</td>\n",
+       "      <td>65.0</td>\n",
+       "      <td>794.329416</td>\n",
+       "      <td>0:03:57.401490</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>JP</th>\n",
-       "      <td>1860.0</td>\n",
-       "      <td>41.0</td>\n",
-       "      <td>831.725269</td>\n",
-       "      <td>0:03:57.793989</td>\n",
+       "      <td>2431.0</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>894.227067</td>\n",
+       "      <td>0:04:09.920410</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>ZA</th>\n",
-       "      <td>1919.0</td>\n",
+       "      <th>DK</th>\n",
+       "      <td>3532.0</td>\n",
+       "      <td>82.0</td>\n",
+       "      <td>814.484711</td>\n",
+       "      <td>0:03:36.507981</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>FI</th>\n",
+       "      <td>2624.0</td>\n",
        "      <td>58.0</td>\n",
-       "      <td>1013.252736</td>\n",
-       "      <td>0:04:11.785627</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>TN</th>\n",
-       "      <td>64.0</td>\n",
-       "      <td>12.0</td>\n",
-       "      <td>1009.390625</td>\n",
-       "      <td>0:03:48.089843</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>TR</th>\n",
-       "      <td>1834.0</td>\n",
-       "      <td>44.0</td>\n",
-       "      <td>861.179935</td>\n",
-       "      <td>0:03:46.618427</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>GB</th>\n",
-       "      <td>984.0</td>\n",
-       "      <td>46.0</td>\n",
-       "      <td>838.870935</td>\n",
-       "      <td>0:03:35.533868</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>MX</th>\n",
-       "      <td>814.0</td>\n",
-       "      <td>28.0</td>\n",
-       "      <td>753.305897</td>\n",
-       "      <td>0:03:32.794174</td>\n",
+       "      <td>803.325457</td>\n",
+       "      <td>0:03:39.158394</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>US</th>\n",
-       "      <td>1351.0</td>\n",
-       "      <td>37.0</td>\n",
-       "      <td>799.274611</td>\n",
-       "      <td>0:03:43.415509</td>\n",
+       "      <td>2416.0</td>\n",
+       "      <td>69.0</td>\n",
+       "      <td>812.242964</td>\n",
+       "      <td>0:03:46.832476</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>CO</th>\n",
-       "      <td>1256.0</td>\n",
-       "      <td>39.0</td>\n",
-       "      <td>920.994427</td>\n",
-       "      <td>0:03:53.523069</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>EC</th>\n",
-       "      <td>370.0</td>\n",
-       "      <td>26.0</td>\n",
-       "      <td>897.683784</td>\n",
-       "      <td>0:03:51.423969</td>\n",
+       "      <th>CA</th>\n",
+       "      <td>1577.0</td>\n",
+       "      <td>31.0</td>\n",
+       "      <td>756.230818</td>\n",
+       "      <td>0:03:29.189874</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>AU</th>\n",
-       "      <td>994.0</td>\n",
-       "      <td>31.0</td>\n",
-       "      <td>751.960765</td>\n",
-       "      <td>0:03:32.821756</td>\n",
+       "      <td>1081.0</td>\n",
+       "      <td>43.0</td>\n",
+       "      <td>806.520814</td>\n",
+       "      <td>0:03:42.066509</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>NZ</th>\n",
-       "      <td>633.0</td>\n",
+       "      <td>677.0</td>\n",
+       "      <td>42.0</td>\n",
+       "      <td>816.867061</td>\n",
+       "      <td>0:03:39.736208</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>BE</th>\n",
+       "      <td>883.0</td>\n",
        "      <td>26.0</td>\n",
-       "      <td>812.481833</td>\n",
-       "      <td>0:03:43.057157</td>\n",
+       "      <td>894.011325</td>\n",
+       "      <td>0:03:51.437475</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CO</th>\n",
+       "      <td>1861.0</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>956.656636</td>\n",
+       "      <td>0:03:55.923657</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>aggregate</th>\n",
-       "      <td>13182.0</td>\n",
-       "      <td>403.0</td>\n",
-       "      <td>839.503490</td>\n",
-       "      <td>0:03:48.753002</td>\n",
+       "      <td>22892.0</td>\n",
+       "      <td>604.0</td>\n",
+       "      <td>853.790014</td>\n",
+       "      <td>0:03:51.501246</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -172,19 +173,19 @@
       ],
       "text/plain": [
        "           n_tracks  n_playlists  mean_n_segments   mean_duration\n",
-       "HK           1103.0         26.0       599.970082  0:03:38.428565\n",
-       "JP           1860.0         41.0       831.725269  0:03:57.793989\n",
-       "ZA           1919.0         58.0      1013.252736  0:04:11.785627\n",
-       "TN             64.0         12.0      1009.390625  0:03:48.089843\n",
-       "TR           1834.0         44.0       861.179935  0:03:46.618427\n",
-       "GB            984.0         46.0       838.870935  0:03:35.533868\n",
-       "MX            814.0         28.0       753.305897  0:03:32.794174\n",
-       "US           1351.0         37.0       799.274611  0:03:43.415509\n",
-       "CO           1256.0         39.0       920.994427  0:03:53.523069\n",
-       "EC            370.0         26.0       897.683784  0:03:51.423969\n",
-       "AU            994.0         31.0       751.960765  0:03:32.821756\n",
-       "NZ            633.0         26.0       812.481833  0:03:43.057157\n",
-       "aggregate   13182.0        403.0       839.503490  0:03:48.753002"
+       "ZA           2192.0         69.0      1043.009124  0:04:26.854877\n",
+       "EG            810.0         27.0       888.991358  0:03:55.153939\n",
+       "TW           2808.0         65.0       794.329416  0:03:57.401490\n",
+       "JP           2431.0         50.0       894.227067  0:04:09.920410\n",
+       "DK           3532.0         82.0       814.484711  0:03:36.507981\n",
+       "FI           2624.0         58.0       803.325457  0:03:39.158394\n",
+       "US           2416.0         69.0       812.242964  0:03:46.832476\n",
+       "CA           1577.0         31.0       756.230818  0:03:29.189874\n",
+       "AU           1081.0         43.0       806.520814  0:03:42.066509\n",
+       "NZ            677.0         42.0       816.867061  0:03:39.736208\n",
+       "BE            883.0         26.0       894.011325  0:03:51.437475\n",
+       "CO           1861.0         60.0       956.656636  0:03:55.923657\n",
+       "aggregate   22892.0        604.0       853.790014  0:03:51.501246"
       ]
      },
      "execution_count": 3,
