--- a/Descriptive stats.ipynb
+++ b/Descriptive stats.ipynb
@@ -12,7 +12,7 @@
     "\n",
     "countriesOfInterest = [\"HK\", \"JP\", 'ZA', 'TN', 'TR', 'GB', 'MX', 'US', 'CO',\n",
     "                       'EC', 'AU', 'NZ']\n",
-    "countriesOfInterest = [\"ZA\", \"EG\", \"TW\", \"JP\", \"DK\", \"FI\", \"US\", \"CA\", \"AU\", \"NZ\", \"BE\", \"CO\"]\n"
+    "countriesOfInterest = [\"ZA\", \"EG\", \"TW\", \"JP\", \"DK\", \"FI\", \"US\", \"CA\", \"AU\", \"NZ\", \"BR\", \"CO\"]\n"
    ]
   },
   {
@@ -147,11 +147,11 @@
        "      <td>0:03:39.736208</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>BE</th>\n",
-       "      <td>883.0</td>\n",
-       "      <td>26.0</td>\n",
-       "      <td>894.011325</td>\n",
-       "      <td>0:03:51.437475</td>\n",
+       "      <th>BR</th>\n",
+       "      <td>3393.0</td>\n",
+       "      <td>84.0</td>\n",
+       "      <td>817.445034</td>\n",
+       "      <td>0:03:30.442930</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>CO</th>\n",
@@ -162,10 +162,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>aggregate</th>\n",
-       "      <td>22892.0</td>\n",
-       "      <td>604.0</td>\n",
-       "      <td>853.790014</td>\n",
-       "      <td>0:03:51.501246</td>\n",
+       "      <td>25402.0</td>\n",
+       "      <td>662.0</td>\n",
+       "      <td>847.537202</td>\n",
+       "      <td>0:03:48.690658</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -183,9 +183,9 @@
        "CA           1577.0         31.0       756.230818  0:03:29.189874\n",
        "AU           1081.0         43.0       806.520814  0:03:42.066509\n",
        "NZ            677.0         42.0       816.867061  0:03:39.736208\n",
-       "BE            883.0         26.0       894.011325  0:03:51.437475\n",
+       "BR           3393.0         84.0       817.445034  0:03:30.442930\n",
        "CO           1861.0         60.0       956.656636  0:03:55.923657\n",
-       "aggregate   22892.0        604.0       853.790014  0:03:51.501246"
+       "aggregate   25402.0        662.0       847.537202  0:03:48.690658"
       ]
      },
      "execution_count": 3,
