Significant memory improvements in sampling

--- a/Build Iteratively.ipynb
+++ b/Build Iteratively.ipynb
@@ -79,15 +79,15 @@
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "lstm (LSTM)                  (None, 1000, 5)           620       \n",
+      "lstm (LSTM)                  (None, 1000, 2)           224       \n",
       "_________________________________________________________________\n",
-      "batch_normalization (BatchNo (None, 1000, 5)           20        \n",
+      "batch_normalization (BatchNo (None, 1000, 2)           8         \n",
       "_________________________________________________________________\n",
-      "lstm_1 (LSTM)                (None, 12)                864       \n",
+      "lstm_1 (LSTM)                (None, 12)                720       \n",
       "=================================================================\n",
-      "Total params: 1,504\n",
-      "Trainable params: 1,494\n",
-      "Non-trainable params: 10\n",
+      "Total params: 952\n",
+      "Trainable params: 948\n",
+      "Non-trainable params: 4\n",
       "_________________________________________________________________\n",
       "None\n"
      ]
@@ -95,7 +95,7 @@
    ],
    "source": [
     "model = keras.Sequential()\n",
-    "model.add(LSTM(5, \n",
+    "model.add(LSTM(2, \n",
     "               input_shape=(train_x.shape[1], train_x.shape[2]), \n",
     "               return_sequences = True,\n",
     "               recurrent_dropout = .5,\n",
@@ -118,10 +118,21 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4644. 5093. 4208. 5442. 3931. 4528. 4323. 5677. 4847. 4649. 3791. 5372.]\n",
+      "Train on 56505 samples, validate on 6373 samples\n",
+      "Epoch 1/3\n",
+      "10240/56505 [====>.........................] - ETA: 1:50 - loss: 2.4876 - acc: 0.0830"
+     ]
+    }
+   ],
    "source": [
     "#add recurrent dropout to add noise to duration\n",
-    "desc = \"2LSTM_5_Output_NoReg_5Step_50train_01LR\"\n",
+    "desc = \"2LSTM_2_Output_NoReg_3Step_50train_01LR_ChangeStack\"\n",
     "log_dir = os.path.join(\n",
     "    \"logs\",\n",
     "    \"betterSampling\",\n",
@@ -132,10 +143,10 @@
     "    \"save\"\n",
     ")\n",
     "\n",
-    "train_n = 50\n",
+    "train_n = 100\n",
     "val_n  = int(train_n/5)\n",
     "tensorboard_callback = tf.keras.callbacks.TensorBoard(log_dir=log_dir, histogram_freq=1)\n",
-    "epochs = 5\n",
+    "epochs = 3\n",
     "iterations = 10\n",
     "learn_rate = 0.01\n",
     "module.train(iterations, learn_rate, train_n, val_n, seconds, samplerate,\n",
