--- a/Get Samples.ipynb
+++ b/Get Samples.ipynb
@@ -26,197 +26,250 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "def splitSeconds(n, country, t):\n",
-    "    print(\"getting file\")\n",
+    "def splitSeconds(n, country, t, seconds, samplerate):\n",
+    "    length = seconds * samplerate\n",
     "    data = pickle.load( open( \"Raw Track Data\\\\\" + country + \"_\" + t + \".p\", \"rb\" ) )\n",
     "    tracks = data.track_id.unique()\n",
-    "    tracks = np.random.choice(tracks, size=n, replace=True)\n",
+    "    tracks = np.random.choice(tracks, size=n, replace=False)\n",
+    "    trackFeats = data[data.track_id.isin(tracks)]\n",
+    "    del data\n",
+    "    dur = trackFeats.iloc[:,1]\n",
+    "    long = trackFeats.loc[trackFeats.index.repeat(dur * samplerate)].reset_index(drop = True)\n",
+    "    del trackFeats\n",
+    "    long = long.sort_values(by = [\"track_id\", \"start\"])\n",
+    "    long['change'] = long.track_id.eq(long.track_id.shift())\n",
+    "    change = long[long.change == False].index\n",
+    "    long = long.iloc[:, 5:30]\n",
+    "    indices = np.concatenate((np.arange(0, long.shape[0], length), change))\n",
+    "    indices = np.sort(indices)\n",
+    "    indices = np.unique(indices)\n",
+    "    partition = np.split(np.array(long), indices)\n",
+    "    del long\n",
     "    samples = []\n",
-    "    for track in tracks:\n",
-    "        try:\n",
-    "            print(\"getting feats\")\n",
-    "            trackFeats = data[data.track_id == track]\n",
-    "            FeatsLen =  trackFeats.shape[0]\n",
-    "            ind = random.randrange(1, FeatsLen - 10)\n",
-    "            feats = trackFeats.iloc[ind:ind+(w_length*10),6:30]\n",
-    "            dur = trackFeats.iloc[ind:ind+(w_length*10),1]\n",
-    "            example = np.array(feats.loc[feats.index.repeat(dur * 100)][-w_length:])\n",
-    "            if example.shape[0] == w_length:\n",
-    "                samples = samples + [example]\n",
-    "        except:\n",
-    "            continue\n",
-    "    samples = np.array(samples)\n",
+    "    for i in partition:\n",
+    "        if i.shape[0] == length:\n",
+    "            samples = samples + [i]\n",
+    "    samples = np.stack(samples)\n",
     "    return samples, np.repeat(np.array([country]), samples.shape[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def getSamples(train_n, val_n):\n",
-    "    train = pd.DataFrame()\n",
+    "def getSamples(train_n, val_n, seconds, samplerate, countriesOfInterest,\n",
+    "               enc, verbose = 0):\n",
     "    train_labels = pd.DataFrame()\n",
-    "    val = pd.DataFrame()\n",
     "    val_labels = pd.DataFrame()\n",
     "    train_x = []\n",
     "    train_labels = []\n",
     "    val_x = []\n",
     "    val_labels = []\n",
     "    for country in countriesOfInterest:\n",
-    "        print(country)\n",
-    "        x1, y1 = splitSeconds(train_n, country, \"train\")\n",
-    "        x2, y2 = splitSeconds(val_n, country, \"val\")\n",
-    "        print(\"collected\")\n",
+    "        if verbose > 0:\n",
+    "            print(\"getting\",country)\n",
+    "        x1, y1 = splitSeconds(train_n, country, \"train\", seconds, samplerate)\n",
+    "        x2, y2 = splitSeconds(val_n, country, \"val\", seconds, samplerate)\n",
     "        train_x = train_x + x1.tolist()\n",
     "        train_labels = train_labels + y1.tolist()\n",
+    "        del x1, y1\n",
     "        val_x = val_x + x2.tolist()\n",
     "        val_labels = val_labels + y2.tolist()\n",
-    "    print(\"cleaning\")\n",
-    "    train_x = np.array(train_x)\n",
-    "    print(train_x.shape)\n",
+    "        del x2, y2\n",
+    "    #train_x = np.array(train_x)\n",
+    "    y = np.dstack(train_x)\n",
+    "    del train_x\n",
+    "    train_x = np.rollaxis(y,-1)\n",
+    "    del y\n",
     "    train_labels = np.array(train_labels)\n",
-    "    val_x = np.array(val_x)\n",
+    "    #val_x = np.array(val_x)\n",
+    "    y = np.dstack(val_x)\n",
+    "    del val_x\n",
+    "    val_x = np.rollaxis(y,-1)\n",
+    "    del y\n",
     "    val_labels = np.array(val_labels)\n",
     "    class_weights = class_weight.compute_class_weight('balanced',\n",
-    "                                                     np.unique(train_labels),\n",
+    "                                                     countriesOfInterest,\n",
     "                                                     list(train_labels))\n",
-    "    #train_labels = enc.transform(np.array(train_labels).reshape(-1,1)).toarray()\n",
-    "    #val_labels = enc.transform(np.array(val_labels).reshape(-1,1)).toarray()\n",
+    "    train_labels = enc.transform(np.array(train_labels).reshape(-1,1)).toarray()\n",
+    "    val_labels = enc.transform(np.array(val_labels).reshape(-1,1)).toarray()\n",
     "    return train_x, train_labels, val_x, val_labels, class_weights"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
+   "outputs": [],
+   "source": [
+    "countriesOfInterest = [\"ZA\", \"EG\", \"TW\", \"JP\", \"DK\", \"FI\", \"US\", \"CA\", \"AU\", \"NZ\", \"BR\", \"CO\"]\n",
+    "train_n = 10\n",
+    "seconds = 10\n",
+    "samplerate = 10 \n",
+    "train_labels = pd.DataFrame()\n",
+    "val_labels = pd.DataFrame()\n",
+    "train_x = []\n",
+    "train_labels = []\n",
+    "val_x = []\n",
+    "val_labels = []\n",
+    "for country in countriesOfInterest:\n",
+    "    x1, y1 = splitSeconds(train_n, country, \"train\", seconds, samplerate)\n",
+    "    train_x = train_x + x1.tolist()\n",
+    "    train_labels = train_labels + y1.tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "getting file\n",
-      "getting feats\n",
-      "getting feats\n",
-      "getting feats\n",
-      "getting feats\n",
-      "getting feats\n",
-      "getting feats\n",
-      "getting feats\n",
-      "getting feats\n",
-      "getting feats\n",
-      "getting feats\n",
-      "getting feats\n",
-      "getting feats\n",
-      "getting feats\n",
-      "getting feats\n",
-      "getting feats\n",
-      "getting feats\n",
-      "getting feats\n",
-      "getting feats\n",
-      "getting feats\n",
-      "getting feats\n",
-      "getting feats\n",
-      "getting feats\n",
-      "getting feats\n",
-      "getting feats\n",
-      "getting feats\n",
-      "getting feats\n",
-      "getting feats\n",
-      "getting feats\n",
-      "getting feats\n",
-      "getting feats\n",
-      "getting feats\n",
-      "getting feats\n",
-      "getting feats\n",
-      "getting feats\n",
-      "getting feats\n",
-      "getting feats\n",
-      "getting feats\n",
-      "getting feats\n",
-      "getting feats\n",
-      "getting feats\n",
-      "getting feats\n",
-      "getting feats\n",
-      "getting feats\n",
-      "getting feats\n",
-      "getting feats\n",
-      "getting feats\n",
-      "getting feats\n",
-      "getting feats\n",
-      "getting feats\n",
-      "getting feats\n",
-      "getting feats\n",
-      "getting feats\n",
-      "getting feats\n",
-      "getting feats\n",
-      "getting feats\n",
-      "getting feats\n",
-      "getting feats\n",
-      "getting feats\n",
-      "getting feats\n",
-      "getting feats\n",
-      "getting feats\n",
-      "getting feats\n",
-      "getting feats\n",
-      "getting feats\n",
-      "getting feats\n",
-      "getting feats\n",
-      "getting feats\n",
-      "getting feats\n",
-      "getting feats\n",
-      "getting feats\n",
-      "getting feats\n",
-      "getting feats\n",
-      "getting feats\n",
-      "getting feats\n",
-      "getting feats\n",
-      "getting feats\n",
-      "getting feats\n",
-      "getting feats\n",
-      "getting feats\n",
-      "getting feats\n",
-      "getting feats\n",
-      "getting feats\n",
-      "getting feats\n",
-      "getting feats\n",
-      "getting feats\n",
-      "getting feats\n",
-      "getting feats\n",
-      "getting feats\n",
-      "getting feats\n",
-      "getting feats\n",
-      "getting feats\n",
-      "getting feats\n",
-      "getting feats\n",
-      "getting feats\n",
-      "getting feats\n",
-      "getting feats\n",
-      "getting feats\n",
-      "getting feats\n",
-      "getting feats\n",
-      "getting feats\n",
-      "getting feats\n",
-      "getting feats\n",
-      "getting feats\n",
-      "getting feats\n"
-     ]
+     "data": {
+      "text/plain": [
+       "(201, 100, 25)"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "countriesOfInterest = [\"ZA\", \"EG\", \"TW\", \"JP\", \"DK\", \"FI\", \"US\", \"CA\", \"AU\", \"NZ\", \"BR\", \"CO\"]\n",
-    "\n",
-    "splitSeconds(500, \"ZA\", \"train\")\n",
-    "#getSamples(50,10)"
+    "x1.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[-6.0000e+01,  1.0000e+00,  2.2400e-01, ...,  9.7300e-01,\n",
+       "         -1.0640e+01, -7.2280e+00],\n",
+       "        [-6.0000e+01,  1.0000e+00,  2.2400e-01, ...,  9.7300e-01,\n",
+       "         -1.0640e+01, -7.2280e+00],\n",
+       "        [-3.4087e+01,  2.4400e-01,  1.0000e+00, ...,  1.6004e+01,\n",
+       "          1.1418e+01, -6.5190e+00],\n",
+       "        ...,\n",
+       "        [-7.6450e+00,  3.2000e-02,  1.1000e-02, ..., -5.2380e+00,\n",
+       "         -4.5440e+01,  4.2320e+00],\n",
+       "        [-7.6450e+00,  3.2000e-02,  1.1000e-02, ..., -5.2380e+00,\n",
+       "         -4.5440e+01,  4.2320e+00],\n",
+       "        [-2.4297e+01,  2.6300e-01,  6.8600e-01, ..., -1.4858e+01,\n",
+       "         -8.1790e+00,  1.0888e+01]],\n",
+       "\n",
+       "       [[-2.5327e+01,  1.0000e+00,  4.6900e-01, ...,  3.9760e+00,\n",
+       "         -1.1933e+01,  1.7507e+01],\n",
+       "        [-2.5327e+01,  1.0000e+00,  4.6900e-01, ...,  3.9760e+00,\n",
+       "         -1.1933e+01,  1.7507e+01],\n",
+       "        [-2.6054e+01,  1.0000e+00,  8.2300e-01, ..., -8.8070e+00,\n",
+       "         -1.0291e+01,  1.1350e+01],\n",
+       "        ...,\n",
+       "        [-1.9238e+01,  1.0000e+00,  6.1500e-01, ..., -6.4180e+00,\n",
+       "          7.2050e+00,  2.9830e+00],\n",
+       "        [-2.2187e+01,  1.0000e+00,  4.5500e-01, ..., -6.1450e+00,\n",
+       "         -9.4030e+00, -3.0390e+00],\n",
+       "        [-2.2187e+01,  1.0000e+00,  4.5500e-01, ..., -6.1450e+00,\n",
+       "         -9.4030e+00, -3.0390e+00]],\n",
+       "\n",
+       "       [[-2.1055e+01,  1.0000e+00,  1.8600e-01, ..., -4.3509e+01,\n",
+       "         -1.4063e+01,  5.4490e+00],\n",
+       "        [-2.1055e+01,  1.0000e+00,  1.8600e-01, ..., -4.3509e+01,\n",
+       "         -1.4063e+01,  5.4490e+00],\n",
+       "        [-5.4500e+00,  1.0000e+00,  4.5200e-01, ...,  1.0508e+01,\n",
+       "          1.4081e+01, -3.6027e+01],\n",
+       "        ...,\n",
+       "        [-6.9920e+00,  1.0000e+00,  6.0200e-01, ...,  3.5670e+00,\n",
+       "         -2.6790e+00, -9.8690e+00],\n",
+       "        [-5.7000e+00,  1.3700e-01,  1.9900e-01, ...,  2.5370e+00,\n",
+       "         -2.5995e+01, -1.4199e+01],\n",
+       "        [-7.6170e+00,  9.2700e-01,  1.0000e+00, ..., -9.6530e+00,\n",
+       "         -3.5566e+01,  1.2443e+01]],\n",
+       "\n",
+       "       ...,\n",
+       "\n",
+       "       [[-1.8751e+01,  1.0000e+00,  1.6400e-01, ..., -3.3900e-01,\n",
+       "          1.6010e+01, -2.0966e+01],\n",
+       "        [-1.7705e+01,  1.0000e+00,  1.5100e-01, ..., -1.8562e+01,\n",
+       "         -2.7529e+01, -5.2820e+00],\n",
+       "        [-1.7705e+01,  1.0000e+00,  1.5100e-01, ..., -1.8562e+01,\n",
+       "         -2.7529e+01, -5.2820e+00],\n",
+       "        ...,\n",
+       "        [-1.9383e+01,  1.0000e+00,  2.7900e-01, ...,  6.3640e+00,\n",
+       "         -4.4754e+01, -8.9580e+00],\n",
+       "        [-1.9383e+01,  1.0000e+00,  2.7900e-01, ...,  6.3640e+00,\n",
+       "         -4.4754e+01, -8.9580e+00],\n",
+       "        [-1.9383e+01,  1.0000e+00,  2.7900e-01, ...,  6.3640e+00,\n",
+       "         -4.4754e+01, -8.9580e+00]],\n",
+       "\n",
+       "       [[-2.9758e+01,  1.0000e+00,  1.9400e-01, ...,  1.4628e+01,\n",
+       "         -7.4850e+00,  4.2920e+00],\n",
+       "        [-2.9758e+01,  1.0000e+00,  1.9400e-01, ...,  1.4628e+01,\n",
+       "         -7.4850e+00,  4.2920e+00],\n",
+       "        [-2.9758e+01,  1.0000e+00,  1.9400e-01, ...,  1.4628e+01,\n",
+       "         -7.4850e+00,  4.2920e+00],\n",
+       "        ...,\n",
+       "        [-3.4014e+01,  1.7800e-01,  2.0500e-01, ..., -2.4986e+01,\n",
+       "         -1.5634e+01, -7.4100e-01],\n",
+       "        [-3.7169e+01,  1.0000e+00,  1.9600e-01, ...,  1.2849e+01,\n",
+       "          2.5530e+00, -2.5040e+00],\n",
+       "        [-3.7169e+01,  1.0000e+00,  1.9600e-01, ...,  1.2849e+01,\n",
+       "          2.5530e+00, -2.5040e+00]],\n",
+       "\n",
+       "       [[-3.7169e+01,  1.0000e+00,  1.9600e-01, ...,  1.2849e+01,\n",
+       "          2.5530e+00, -2.5040e+00],\n",
+       "        [-3.7169e+01,  1.0000e+00,  1.9600e-01, ...,  1.2849e+01,\n",
+       "          2.5530e+00, -2.5040e+00],\n",
+       "        [-3.7169e+01,  1.0000e+00,  1.9600e-01, ...,  1.2849e+01,\n",
+       "          2.5530e+00, -2.5040e+00],\n",
+       "        ...,\n",
+       "        [-4.3851e+01,  1.0000e+00,  5.4100e-01, ..., -2.0638e+01,\n",
+       "         -1.0798e+01, -1.7391e+01],\n",
+       "        [-4.3851e+01,  1.0000e+00,  5.4100e-01, ..., -2.0638e+01,\n",
+       "         -1.0798e+01, -1.7391e+01],\n",
+       "        [-4.3851e+01,  1.0000e+00,  5.4100e-01, ..., -2.0638e+01,\n",
+       "         -1.0798e+01, -1.7391e+01]]])"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.array(train_x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(163, 100, 25)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sample[0].shape"
    ]
   },
   {
